--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -29,11 +29,11 @@ jobs:
         uses: thedoctor0/zip-release@0.7.5
         with:
           type: 'zip'
-          filename: 'release.zip'
+          filename: '.github/artifacts/release.zip'
           exclusions: '*.git* /*node_modules/* .editorconfig'
       # Upload zip
       - name: Upload Release
         uses: ncipollo/release-action@v1.14.0
         with:
-          artifacts: "release.zip"
+          artifacts: ".github/artifacts/release.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
