--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -37,5 +37,7 @@ jobs:
       - name: Upload Release
         uses: ncipollo/release-action@v1.14.0
         with:
+          tag: "Release"
+          override: true
           artifacts: ".github/artifacts/release.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
