--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Upload Release
         uses: ncipollo/release-action@v1.14.0
         with:
-          tag: "Release ${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}"
+          #tag: "Release ${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}"
           artifacts: ".github/artifacts/release.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
+          commit: true
