--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -9,8 +9,6 @@ on:
     branches: [ "main" ]
     tags:
       - '*'
-  pull_request:
-    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -37,7 +35,7 @@ jobs:
       - name: Upload Release
         uses: ncipollo/release-action@v1.14.0
         with:
-          #tag: "Release ${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}"
+          tag: "v.${GITHUB_RUN_ID}.${GITHUB_RUN_NUMBER}"
           artifacts: ".github/artifacts/release.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
           commit: true
