--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -1,49 +1,44 @@
-# This is a basic workflow to help you get started with Actions
+name: Release Workflow
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-    tags:
-      - '*'
+    branches:
+      - main  # Sadece 'release' dalına push edildiğinde çalışır
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  create_release:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Generate release tag
-        id: generate_release_tag
-        uses: amitsingh-007/next-release-tag@v6.0.0
+      # 1. Depoyu checkout et
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      # 2. Proje dosyalarını zip oluştur, exclude edilen dosyaları çıkar
+      - name: Archive Project Files
+        run: |
+          # Versiyon numarası belirleme
+          VERSION=$(date +'%Y%m%d%H%M%S')  # Benzersiz bir versiyon numarası
+          
+          # Klasör ve dosyaları ziplerken exclude et
+          zip -r "release_$VERSION.zip" . -x "*.git*" "node_modules/*" ".editorconfig"
+
+      # 3. ZIP dosyasını release olarak yükle
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag_prefix: 'v'
-          tag_template: 'yyyy.mm.dd.i'
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-      # Zip the plug-in
-      - name: Archive Release
-        uses: thedoctor0/zip-release@0.7.5
-        with:
-          type: 'zip'
-          filename: '.github/artifacts/release.zip'
-          exclusions: '*.git* /*node_modules/* .editorconfig'
-      # Upload zip
-      - name: Upload Release
-        uses: ncipollo/release-action@v1.14.0
-        with:
-          name: Release ${{ steps.generate_release_tag.outputs.next_release_tag }}
-          tag: ${{ steps.generate_release_tag.outputs.next_release_tag }}
-          artifacts: ".github/artifacts/release.zip"
+          tag_name: "v$VERSION"
+          release_name: "Release $VERSION"
+          draft: false
+          prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit: true
+
+      # 4. ZIP dosyasını release'e ekle
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: "./release_$VERSION.zip"
+          asset_name: "release_$VERSION.zip"
+          asset_content_type: application/zip
