--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -21,7 +21,7 @@ jobs:
           VERSION=$(date +'%Y%m%d%H%M%S')  # Benzersiz bir versiyon numarası
           
           # Klasör ve dosyaları ziplerken exclude et
-          zip -r "release_$VERSION.zip" . -x "*.git*" "node_modules/*" ".editorconfig"
+          zip -r "release_$VERSION.zip" . -x "*.git*" "node_modules/*" ".editorconfig" "LICENSE"
 
       # 3. GitHub CLI yükle
       - name: Install GitHub CLI
